# SWEngine-graphical

./: .cmake_linux.cmake  .cmake_windows.cmake  .gitignore  CMakeLists.txt  README.md  check_for_update.sh
module/: .cmake_linux.cmake  .cmake_windows.cmake  CMakeLists.txt  README.md
module/cmake/: windows.cmake
module/includes/: OpenGLModule.hpp  OpenGLModule_Config.hpp  concepts.hpp
module/includes/components/: Animator.hpp  AudioSource.hpp  BoxCollider.hpp  Camera.hpp  Components.hpp  Light.hpp  Material.hpp  Mesh.hpp  MeshRenderer.hpp  ModelAnimator.hpp  Primitive.hpp  RigidBody2D.hpp  Sprite.hpp  Text.hpp  Transform.hpp
module/includes/components/base/: Component.hpp  Component.inl  IComponent.hpp
module/includes/components/ui/: Button.hpp  CheckBox.hpp  TextInput.hpp
module/includes/config/: Config.hpp
module/includes/dependencies/glad/: glad.h
module/includes/dependencies/glm/: common.hpp  exponential.hpp  fwd.hpp  geometric.hpp  integer.hpp  mat2x2.hpp  mat2x3.hpp  mat2x4.hpp  mat3x3.hpp  mat4x4.hpp  matrix.hpp  packing.hpp  vec2.hpp
module/includes/dependencies/glm/detail/: func_integer_simd.inl  func_matrix.inl  type_mat2x3.hpp  type_mat2x4.hpp  type_mat3x3.hpp  type_mat3x4.hpp  type_mat4x2.hpp  type_mat4x3.hpp  type_mat4x4.hpp
module/includes/dependencies/glm/gtc/: bitfield.hpp  bitfield.inl  color_space.hpp  functions.hpp  functions.inl  integer.hpp  matrix_access.hpp  matrix_inverse.hpp  (+10 more)
module/includes/event/: Event.hpp  Event.inl  EventCollision.hpp  EventGODestroy.hpp  EventInfo.hpp  EventListener.hpp  EventListener.inl  EventManager.hpp  EventManager.inl  IEventListener.hpp
module/includes/exception/: FileException.hpp
module/includes/gameObject/: GameObject.hpp  GameObject.inl  IGameObject.hpp
module/includes/managers/: AnimatorManager.hpp  AudioSourceManager.hpp  BoxColliderManager.hpp  ButtonManager.hpp  CameraManager.hpp  CheckBoxManager.hpp  LightManager.hpp  Managers.hpp  MeshManager.hpp  ModelAnimatorManager.hpp  PrimitiveManager.hpp  RigidBody2DManager.hpp  ScriptManager.hpp  SpriteManager.hpp  TextInputManager.hpp  TextManager.hpp  TransformManager.hpp
module/includes/managers/base/: AManager.hpp  AManager.inl  IManager.hpp
module/includes/resources/: AResources.hpp  Animation.hpp  Audio.hpp  Bone.hpp  BoneInfo.hpp  Font.hpp  MAnimator.hpp  Model.hpp  OpenResources.hpp  Texture.hpp
module/includes/scenes_manager/: Scene.hpp  SceneLoadEvent.hpp  SceneManager.hpp
module/includes/scenes_manager/scene/: Scene.hpp  Scene.inl  SceneManagerFunction.inl
module/includes/utils/: Buffer.hpp  Buffer.inl  Buffer_utility.inl  Chrono.inl  Color.hpp  Color.inl  File.hpp  Inputs.hpp  Rect.hpp  Rect.inl  RenderTexture.hpp  Shader.hpp  ShaderSource.hpp  Speech.hpp  Vector2.hpp  Vector2.inl  Vertex.hpp  Vertex.inl
module/includes/utils/async/: AsyncOperation.hpp  AsyncOperation.inl  AsyncScene.hpp
module/includes/utils/tree/: aabb.hpp
module/includes/window/: Monitors.hpp  Window.hpp
module/shaders/: fragment_shader.glsl  model_fs.glsl  model_vs.glsl
module/sources/: Config.cpp  GameObject.cpp  Module.cpp  glad.c  json.cpp
module/sources/components/: Animator.cpp  AudioSource.cpp  BoxCollider.cpp  Camera.cpp  Light.cpp  Material.cpp  Mesh.cpp  MeshRenderer.cpp  ModelAnimator.cpp  Primitive.cpp  RigidBody2D.cpp  Sprite.cpp  Text.cpp
module/sources/components/base/: Component.cpp
module/sources/components/transform/: Matrix.cpp  Transform.cpp  rotate.cpp  scale.cpp  translate.cpp
module/sources/components/ui/: Button.cpp  CheckBox.cpp  TextInput.cpp
module/sources/event/: Event.cpp  EventGODestroy.cpp  EventManager.cpp
module/sources/exception/: FileException.cpp
module/sources/gameObject/: GameObject.cpp
module/sources/managers/: AnimatorManager.cpp  AudioManager.cpp  AudioSourceManager.cpp  BoxColliderManager.cpp  ButtonManager.cpp  CameraManager.cpp  CheckBoxManager.cpp  LightManager.cpp  MeshManager.cpp  ModelAnimatorManager.cpp  PrimitiveManager.cpp  RigidBody2DManager.cpp  SpriteManager.cpp  TextInputManager.cpp  TextManager.cpp
module/sources/resources/: Animation.cpp  Audio.cpp  Bone.cpp  Font.cpp  MAnimator.cpp  Model.cpp  OpenResources.cpp  Texture.cpp
module/sources/scene_manager/: Scene.cpp  SceneManager.cpp
module/sources/scenes_manager/: SceneLoadEvent.cpp  SceneManager.cpp
module/sources/scenes_manager/scene/: Scene.cpp  SceneEntityFunction.cpp  SceneManagerFunction.cpp
module/sources/utils/: Color.cpp  File.cpp  RenderTexture.cpp  Shader.cpp  ShaderSource.cpp  Speech.cpp  VertexArray.cpp
module/sources/utils/async/: AsyncOperation.cpp  AsyncScene.cpp
module/sources/window/: Monitors.cpp  Window.cpp  WindowCallBack.cpp  WindowFlags.cpp
module/tests/: .cmake_windows.cmake  CMakeLists.txt
module/tests/includes/: BaseEngineTest.hpp  CptManager_Tests.hpp  Engine_tests.hpp
module/tests/includes/fixture/: AnimatorFixture.hpp  SpriteFixture.hpp  TransformTest.hpp
module/tests/includes/scenes/: Main.hpp
module/tests/sources/: CptManager_Tests.cpp  Engine_tests.cpp  Entity_Test.cpp  Error_tests.cpp  Matrix_Tests.cpp  Rect_Test.cpp  Scene_Tests.cpp  Vector2_Tests.cpp
module/tests/sources/component/: Animator.cpp  Sprite.cpp
module/tests/sources/fixture/: AnimatorFixture.cpp  SpriteFixture.cpp  TransformTest.cpp
module/tests/sources/script/: Test.cpp
tests/: .cmake_windows.cmake  CMakeLists.txt  check_for_update.sh
tests/includes/: BaseEngineTest.hpp  EventTester.hpp  GameObjectTester.hpp  SceneTester.hpp
tests/includes/fixture/: AnimatorFixture.hpp  SpriteFixture.hpp
tests/includes/scenes/: Main.hpp
tests/includes/script/: ScriptTest.hpp
tests/sources/: Chrono_Tests.cpp  Component_Test.cpp  CptManager_Tests.cpp  Engine_tests.cpp  Event_Tests.cpp  Reference_Tests.cpp  Scene_Tests.cpp  Speech_Tests.cpp  Vector2_Tests.cpp  file.cpp
tests/sources/Color/: Color.cpp
tests/sources/component/: Animator.cpp  Sprite.cpp
tests/sources/component/transform/: Transform.cpp
tests/sources/fixture/: SpriteFixture.cpp  TransformTest.cpp
tests/sources/template/scenes/: Main.cpp
(+243 files in other folders)
